# DPCrawler

./: .gitignore  BUNDLING.md  LICENSE  PRD.md  RAG_API_DOCS.md  README_DEPLOY.md  build-sidecar.bat  build-sidecar.sh  dpc_search_server.html  headless_client.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
python/: __init__.py  config.py  crawler.py  crawler.spec  marker_loader.py  parsers.py  pdf_parser.py  requirements.txt  storage.py  test_crawl.py
rust-gui-demo/: CRAWLER_INTEGRATION.md  Cargo.toml  README_MODULAR.md
rust-gui-demo/src/: app.rs  components.rs  crawler.rs  lib.rs  main.rs  theme.rs
scripts/: build-sidecar.js  setup.js
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_utils.rs  lib.rs  main.rs  process.rs  search.rs  server.rs
