[package]
name = "gui_demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "gui_demo"
path = "src/lib.rs"

[[bin]]
name = "gui_demo"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
regex = "1"
