[package]
name = "dpcrawler"
version = "1.0.0"
description = "RAG Knowledge Crawler"
authors = [""]
edition = "2021"

[lib]
name = "dpcrawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
open = "5"
libc = "0.2"
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
