[package]
name = "dpcrawler"
version = "2.1.0"
description = "A Tauri App"
authors = [""]
edition = "2021"
default-run = "dpcrawler"

[lib]
name = "dpcrawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["devtools"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-mcp-bridge = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
open = "5"
dirs = "5.0"
pulldown-cmark = "0.11"
tauri-plugin-window-state = { version = "2", optional = true }
chrono = "0.4"
base64 = "0.22.1"
tauri-plugin-clipboard-manager = { version = "2.3.2", optional = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
mime_guess = "2.0"
url = "2.5"

[features]
default = ["desktop"]
desktop = [
    "tauri",
    "tauri-plugin-dialog",
    "tauri-plugin-mcp-bridge",
    "tauri-plugin-window-state",
    "tauri-plugin-clipboard-manager",
    "tauri-build"
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
